# DischeckerAi

DiscordAIHelper/: .gitignore  .replit  DISCORD_TOKEN_GUIDE.md  README.md  RENDER_DEPLOY.md  deploy-test.py  main.py  pyproject.toml  render.yaml  replit.md  requirements-render.txt  run.bat  run.sh  setup_auto.py  start.py  test_token.py  token_debug.py  web_server.py
DiscordAIHelper/cogs/: __init__.py  admin.py  commands.py
DiscordAIHelper/config/: authorized_users.yaml  config.yaml  config.yaml.backup  instructions.txt
DiscordAIHelper/data/: selfbot.db
DiscordAIHelper/temp_keepalive/: keepalive_1753472370.tmp  keepalive_1753472390.tmp  keepalive_1753472410.tmp  keepalive_1753472430.tmp  keepalive_1753472450.tmp  keepalive_1753472470.tmp  keepalive_1753472490.tmp  keepalive_1753472510.tmp  keepalive_1753472530.tmp  keepalive_1753472549.tmp  keepalive_1753472569.tmp  keepalive_1753472589.tmp  keepalive_1753472609.tmp  keepalive_1753472629.tmp  keepalive_1753472649.tmp  keepalive_1753472669.tmp
DiscordAIHelper/utils/: __init__.py  ai.py  auth.py  db.py  error_notifications.py  helpers.py  setup.py  split_response.py
